1.2.16: 2004-08-15
	- fullscreen fix for _NET_WM_STATE_FULLSCREEN (affects mplayer)

1.2.15: 2004-08-09
	- enable locale for icesh

1.2.15pre4: 2004-08-05
	- fix crash/lockup at startup in ACPI status applet when ac module
          not loaded
	- tray icon sizing cleanups
	- fix bug 883518: keyboard gets locked until icewm menu is activated
	- double buffering fixes
	- French translation update
	- Finnish translation update (Taisto Kuikka)
	- menuprogreload menu keyword added (Konstantin Korikov)
	  syntax: menuprogreload title icon timeout command ...
	- battery status display for FreeBSD (Hanspeter Roth)
	- smart snap window positioning triggered by C+S+A+numpad (Bert Wesarg)
	- key to show desktop (Super+D)

1.2.15pre3: 2004-08-01
	- icesound gcc 2.95.3 compile fix (Thomas Zajic)
	- net status support for OpenBSD (Hanspeter Roth)
	- FreeBSD build fix (Hanspeter Roth)
	- basename cleanups for FreeBSD
	- systray cleanups for wine, ...
	- battery status uses design capacity (Hanspeter Roth)

1.2.15pre2: 2004-07-18
	- Slovak translation (Radovan Stas)
	- fix activation from gnome-2.6 panel to properly raise window
	- fix transparency support (caused crashes in xchat...)
        - NetBSD support for NetStatus (Iain Hibbert)
	- net modifier setup code to cope with weird xorg modifier setup

1.2.15pre1: 2004-06-27
	- fix ppp applet isdn online status
	- fix focusing new+maximized windows
	- fix some alt+tab pref combinations (hidden + all/group workspaces)
	- some more gcc 3.4 fixes (morfic)

1.2.14: 2004-05-22
	- minor tweak to alt+tab behavior when selecting from all 
	  workspaces

1.2.14pre16: 2004-05-09
	- netwm modal state broken, disabled
	- make menu/config file parsing behave more like sh (handle both
          single and double quotes) -- Eduard Bloch
	- Italian translation update
	- Czech translation update
	- fix build with gcc-3.4

1.2.14pre15: 2004-05-02
	- add new theme yellowmotif (Andreas Leitgeb (avl42))
	- fix in window mapping code for Citrix client