@@ -1,5 +1,6 @@
 1.2.16: 2004-08-15
 	- fullscreen fix for _NET_WM_STATE_FULLSCREEN (affects mplayer)
+	- use our own replacement for basename
 
 1.2.15: 2004-08-09
 	- enable locale for icesh
